Dark mode fixed. Responsive. More routing

--- a/app/globals.css
+++ b/app/globals.css
@@ -3,12 +3,14 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
+  --foreground-rgb: 15, 23, 42;
+  --background-rgb: 226, 232, 240;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --foreground-rgb: 255, 255, 255;
+    --foreground-rgb: 226, 232, 240;
+    --background-rgb: 15, 23, 42;
   }
 }
 html {
@@ -17,4 +19,5 @@ html {
 
 body {
   color: rgb(var(--foreground-rgb));
+  background: rgb(var(--background-rgb));
 }
